--- a/SMS/SMSapp/templates/grades.html
+++ b/SMS/SMSapp/templates/grades.html
@@ -68,31 +68,10 @@
                     </ul>
                 </li>                                
                 <li class="sidebar-item">
-                    <a href="#" class="sidebar-link collapsed has-dropdown" data-bs-toggle="collapse"
-                        data-bs-target="#smart" aria-expanded="true" aria-controls="smart">
+                    <a href="{% url 'smart_analytics' %}" class="sidebar-link">
                         <img src="{% static 'icons/analytics.png' %}" alt="SMART Analytics" class="me-3" style="max-width: 40px;">
                         <span>SMART Analytics</span>
                     </a>
-                    <ul id="smart" class="sidebar-dropdown list-unstyled collapse" data-bs-parent="#sidebar">
-                        <li class="sidebar-item">
-                            <a href="{% url 'studgroup' %}" class="sidebar-link">
-                                <img src="{% static 'icons/group.png' %}" alt="Student Grouping and Profiling" class="me-3" style="max-width: 40px;">
-                                <span>Student Grouping & Profiling</span>
-                            </a>
-                        </li>
-                        <li class="sidebar-item">
-                            <a href="{% url 'droprisk' %}" class="sidebar-link">
-                                <img src="{% static 'icons/risk.png' %}" alt="Drop Out Risk Prediction" class="me-3" style="max-width: 40px;">
-                                <span>Drop Out Risk Prediction</span>
-                            </a>
-                        </li>
-                        <li class="sidebar-item">
-                            <a href="{% url 'perfanalysis' %}" class="sidebar-link">
-                                <img src="{% static 'icons/performance.png' %}" alt="Performance Prediction" class="me-3" style="max-width: 40px;">
-                                <span>Performance Analysis</span>
-                            </a>
-                        </li>
-                    </ul>
                 </li>
                 <li class="sidebar-item">
                     <a href="#" class="sidebar-link collapsed has-dropdown" data-bs-toggle="collapse"
@@ -424,18 +403,18 @@ document.getElementById("sort_by").addEventListener("change", function () {
 </script>
 
 <script>
-document.querySelectorAll('.edit-btn').forEach(button => {
-    button.addEventListener('click', () => {
-    const modal = document.getElementById('editModal');
-    modal.querySelector('#modal-student-id').value = button.dataset.studentId;
-    modal.querySelector('#modal-student-name').textContent = button.dataset.studentName;
-    modal.querySelector('#modal-student-section').textContent = button.dataset.studentSection;
+    document.querySelectorAll('.edit-btn').forEach(button => {
+        button.addEventListener('click', () => {
+        const modal = document.getElementById('editModal');
+        modal.querySelector('#modal-student-id').value = button.dataset.studentId;
+        modal.querySelector('#modal-student-name').textContent = button.dataset.studentName;
+        modal.querySelector('#modal-student-section').textContent = button.dataset.studentSection;
 
-    {% for subject in subjects %}
-    modal.querySelector('#modal-{{ subject.code|lower }}').value = button.dataset["{{ subject.code|lower }}"] || "";
-    {% endfor %}
-  });
-});
+        {% for subject in subjects %}
+        modal.querySelector('#modal-{{ subject.code|lower }}').value = button.dataset["{{ subject.code|lower }}"] || "";
+        {% endfor %}
+    });
+    });
 </script>
   
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
