--- a/SMS/SMSapp/templates/grades.html
+++ b/SMS/SMSapp/templates/grades.html
@@ -60,7 +60,7 @@
                             </a>
                         </li>
                         <li class="sidebar-item">
-                            <a href="{% url 'grades' %}" class="sidebar-link">
+                            <a href="{% url 'grades' %}" class="sidebar-link active"> 
                                 <img src="{% static 'icons/grades.png' %}" alt="Grades" class="me-3" style="max-width: 40px;">
                                 <span>Grades</span>
                             </a>
